# multi-aws-tool

./: .gitignore  DEVELOPMENT.md  LIBRARY_USAGE.md  MANIFEST.in  OUTPUT_MODULE.md  Plan.md  README.md  __init__.py  iamparse.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: publish-pypi.yml
examples/: example_usage.py  parse_outputs.py
mat_parse/: __init__.py  cli.py
mat_parse/csv/: __init__.py  csv.py
mat_parse/iam/: __init__.py  iamparse.py
multi_aws_tool/: __init__.py  main.py  output.py
multi_aws_tool/aws/: account_manager.py  organizations_client.py
multi_aws_tool/cli/: commands.py
multi_aws_tool/config/: __init__.py  manager.py  template_manager.py
multi_aws_tool/models/: __init__.py  account.py  config.py  result.py  template.py
multi_aws_tool/tui/: __init__.py  app.py
multi_aws_tool/utils/: account_data.py  data_validation.py  report_parser.py  validators.py
src/: __init__.py
src/aws/: __init__.py  account_manager.py  sso_client.py
src/cli/: __init__.py  commands.py
src/config/: manager.py  schema.py
src/models/: account.py  config.py
src/utils/: __init__.py  account_data.py  logging_config.py
tests/: __init__.py  test_tag_commands.py  test_tag_filtering.py  test_templates.py  test_tui.py
