[project]
name = "multi-aws-tool"
version = "0.1.1"
description = "Multi AWS tool for managing operations across multiple AWS accounts via SSO"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
    "boto3>=1.26.0",
    "configparser>=5.0.0",
    "pyyaml>=6.0",
    "colorama>=0.4.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/amahlaka/multi-aws-tool"
Repository = "https://github.com/amahlaka/multi-aws-tool"

[project.scripts]
multi-aws = "multi_aws_tool.main:main"
mat-parse = "mat_parse.cli:main"


[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"